fixing ca issuer

--- a/environment/4-istio/base/active/gateway-cert.yaml
+++ b/environment/4-istio/base/active/gateway-cert.yaml
@@ -20,6 +20,6 @@ spec:
   dnsNames:
   - '*'
   issuerRef:
-    name: ca-issuer
+    name: gateway-ca
     kind: ClusterIssuer
     group: cert-manager.io
